--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experiência</a>
-          </li>
+          </li>-->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Educação</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-          </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#interests">Interesses</a>
+          </li>-->
+          <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-          </li>
+          </li>-->
         </ul>
       </div>
     </nav>
@@ -69,19 +69,19 @@
           <div class="subheading mb-5">
             <a href="mailto:name@email.com">bruna.t.f.ferreira@gmail.com</a>
           </div>
-          <p class="lead mb-5">Graduanda em Análise e Desenvolvimento de Sistemas na Faculdade Martha Falcão</p>
+          <p class="lead mb-5">Graduanda em Análise e Desenvolvimento de Sistemas na Faculdade Martha Falcão - Wyden.
+            Participando Programa de Iniciação Científica e Tecnológica (PICT) - 2018/2019, no qual a proposta do projeto é 
+            Uma proposta de Serious Game aplicado para o ensino de funções orgânicas dentro da Bioquímica.
+            Uma jovem padawan em desenvolvimento Web.</p>
           <div class="social-icons">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/bruna-tatiane-farias" target="_blank">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#">
+            <a href="https://github.com/BrunaFarias" target="_blank">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
+            <a href=" http://lattes.cnpq.br/7169212502418752" target="_blank">
+              <i class="fa fa-fw fa-bookmark"></i>
             </a>
           </div>
         </div>
@@ -89,7 +89,7 @@
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
 
@@ -140,7 +140,7 @@
         </div>
 
       </section>
-
+    -->
       <hr class="m-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
@@ -165,27 +165,25 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
+          <h2 class="mb-5">Habilidades</h2>
+            <p>HTML</p>
+              <div class="container">
+                <div class="skills html">90%</div>
+              </div>
 
-          <p>HTML</p>
-<div class="container">
-  <div class="skills html">90%</div>
-</div>
+            <p>CSS</p>
+              <div class="container">
+                <div class="skills css">80%</div>
+              </div>
 
-<p>CSS</p>
-<div class="container">
-  <div class="skills css">80%</div>
-</div>
-
-<p>JavaScript</p>
-<div class="container">
-  <div class="skills js">65%</div>
-</div>
-
-<p>PHP</p>
-<div class="container">
-  <div class="skills php">60%</div>
-</div>
+            <p>JavaScript</p>
+              <div class="container">
+                <div class="skills js">65%</div>
+              </div>
+            <p>PHP</p>
+              <div class="container">
+                <div class="skills php">60%</div>
+              </div>
         </div>
       </section>
 
@@ -193,7 +191,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
+          <h2 class="mb-5">Interesses</h2>
           <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
           <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
         </div>
